objects/vbtapp__TrialforceSetupScript__mdt.object
<CustomObject>
    <fields>
        <fullName>vbtapp__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vbtapp__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vbtapp__Path__c</fullName>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vbtapp__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Trialforce Setup Script</label>
    <pluralLabel>Trialforce Setup Scripts</pluralLabel>
</CustomObject>